--- a/src/layouts/stats-page-layout/stats-page.css
+++ b/src/layouts/stats-page-layout/stats-page.css
@@ -16,9 +16,10 @@
 .stats-main h1 {
   font-size: 28px;
   font-weight: 700;
-  padding: 27px 0 16px 34px;
+  padding: 27px 0 16px 0;
   margin: 0;
   color: white;
+  text-align: center;
 }
 
 .stats-main h2 {
@@ -260,6 +261,7 @@
   width: 100%;
   justify-content: center;
   background: #000;
+  margin-bottom: 38px;
 }
 
 .active-tab {
@@ -312,5 +314,10 @@
   .leaders-title {
     text-align: start;
     padding-left: 49px;
+  }
+
+  .stats-main h1 {
+    text-align: start;
+    padding-left: 34px;
   }
 }
